# Kai

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  config.h.in
app/: kai.cpp
include/Kai/: config.h  logging.h  miscellaneous.h
patches/: poll-include.patch
src/: logging.cpp  main.cpp  miscellaneous.cpp
